v 0.10

- Texturing for models.

v 0.9

- Display EMD model also for RE1 (pc/ps1), RE2 (pc/ps1) and RE3 pc.
- Model selection
- Move model up/down
- Fixed crash in OpenGL renderer, due to bad conversion of background image.
- Add 8bit video mode support, with dithering for background if needed
- Preliminary VS2005 project file.

v 0.8

- Display an EMD object (RE2 pc demo only).
- Forceable background restoration and reset player position

v 0.7

- Separate software and OpenGL renderers.
- Togglable grid display.
- Removed libGLU dependency.

v 0.6

- There are two different demos of Resident Evil 2 for PC.
- Try to deal with screen aspect ratio if possible.
- Separated OpenGL and software renderer.
- Software renderer: rescale background to match window size.
- More C language compatibility.
- Configurable prefix for physfs.

v 0.5

- Do not refresh screen as fast as possible, and free cpu instead.
- Added Resident Evil 2, PS1, Demo, Pal.
- Added Resident Evil 3, PC, Game.
- Load room description to know how many cameras there are.
- configure.ac reworked to use pkg-config for FFmpeg libraries.
- Started writing OpenGL renderer.

v 0.4

- Added Resident Evil 2, PS1, Game.
- Added Resident Evil 2, PC, Game.
- Preliminary movie player using ffmpeg library.

v 0.3

- Don't reload image if switching between fullscreen and windowed.

v 0.2

- Replaced all filesystems access by Physfs library, also used to access
  Resident Evil 3 rofs<n>.dat archives.

v 0.1

- First release